@@ -308,6 +308,15 @@ PUBLISH_RELATED_ASSETS  = Yes
 
 ENABLE_OC_ASSET_ASSOCIATION = Yes
 
+# Relateds POD Tag. This directive controls the type of related media and
+# related story POD tags that will be generated by the C<serialize_to_pod()>
+# method of Bric::Biz::Element::Container and therefore the "Bulk Edit"
+# interface in the UI. The tags have the format of '=related_story_*' or
+# '=related_media_*', where "*" is drawn from this directive and can be any
+# one of: "uuid", "uri", "url", or "id". Defaults to "uuid."
+
+RELATED_DOC_POD_TAG     = uuid
+
 # URI setting. Enable this directive if you wish for story URIs to always
 # include their file names. This is useful for allowing stories to be in the
 # same category and date but have different file names and still be
