@@ -2076,6 +2076,22 @@ a page index number to uniquely name the file for a given story. Defaults to
 
 =back
 
+=head2 Relateds POD Tag
+
+=over 4
+
+=item *
+
+B<RELATED_DOC_POD_TAG:> Controls the type of related media and related story
+POD tags that will be generated by the C<serialize_to_pod()> method of
+L<Bric::Biz::Element::Container|Bric::Biz::Element::Container> and therefore
+the "Bulk Edit" interface in the UI. The tags have the format of
+C<=related_story_*> or C<=related_media_*', where "*" is drawn from this
+directive and can be any one of: "uuid", "uri", "url", or "id". Defaults to
+"uuid" if not specified.
+
+=back
+
 =head2 Story URI configuration
 
 =over
