@@ -66,6 +66,13 @@ be selected from a select list for each site. [David]
 The Element Type Manager now displays the key name for each element, in
 addition to its name, and instead of the its description. [David]
 
+=item *
+
+Added C<RELATED_DOC_POD_TAG> F<bricolage.conf> directive, so that users don't
+have to be limited to seeing related stories and related media represented by
+C<=related_story_uuid> and C<=related_media_uuid>. Just set it to "uuid",
+"uri", "url", or "id" to get a different tag. [David]
+
 =back
 
 =cut
@@ -125,7 +132,7 @@ C<href()> methods in the following classes:
 =item *
 
 Added C<serialize_to_pod()> and C<update_from_pod()> methods to the container
-element class. These support a pseudo-pod syntax that enable a complete
+element class. These support a pseudo-pod syntax that enables a complete
 hierarchy of elements to be edited, including links to related stories and
 media, in a single stream of text. [David]
 
@@ -896,8 +903,8 @@ Sponsored by PT.com. [George Schlossnagle]
 =item *
 
 Added UUIDs to story and media documents. A UUID is a universally unique
-identifiers.  The format for UUIDs has been described in RFC 4122, ITU-T
-Rec. X.667 and ISO/IEC 11578:1996. In Bricolage, they are generated by
+identifier. The format for UUIDs has been described in RFC 4122, ITU-T Rec.
+X.667 and ISO/IEC 11578:1996. In Bricolage, they are generated by
 L<Data::UUID|Data::UUID>.
 
 =back
